--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="container">
         <h1>Study Planner</h1>
 
-        <!-- Task Input -->
+        <!-- Task Input Section -->
         <div class="task-input">
-            <input type="text" id="description" placeholder="Task Description">
-            <input type="date" id="deadline" placeholder="Deadline">
+            <input type="text" id="description" placeholder="Enter Task Description" required>
+            <input type="date" id="deadline" required>
             <button onclick="addTask()">Add Task</button>
         </div>
 
-        <!-- Action Buttons -->
+        <!-- Action Buttons Section -->
         <div class="task-actions">
             <button onclick="displayTasks()">Display Planned Tasks</button>
             <button onclick="displayCompletedTasks()">Show Completed Tasks</button>
@@ -25,19 +25,19 @@
             <button onclick="clearAllTasks()">Clear All Tasks</button>
         </div>
 
-        <!-- Planned Tasks Display -->
+        <!-- Planned Tasks Display Section -->
         <div id="taskDisplay" style="display: none;">
             <h2>Planned Tasks</h2>
             <ul id="plannedTasks"></ul>
         </div>
 
-        <!-- Completed Tasks Display -->
+        <!-- Completed Tasks Display Section -->
         <div id="completedTasksDisplay" style="display: none;">
             <h2>Completed Tasks</h2>
             <ul id="completedTasks"></ul>
         </div>
 
-        <!-- Progress Display -->
+        <!-- Progress Display Section -->
         <div id="progressDisplay" style="display: none;">
             <h2>Progress</h2>
             <p id="progressData"></p>
