--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         </div>
 
         <!-- Planned Tasks Display Section -->
-        <div id="taskDisplay" style="display: none;">
+        <div id="taskDisplay" class="task-section" style="display: none;">
             <h2>Planned Tasks</h2>
             <ul id="plannedTasks"></ul>
         </div>
 
         <!-- Completed Tasks Display Section -->
-        <div id="completedTasksDisplay" style="display: none;">
+        <div id="completedTasksDisplay" class="task-section" style="display: none;">
             <h2>Completed Tasks</h2>
             <ul id="completedTasks"></ul>
         </div>
 
         <!-- Progress Display Section -->
-        <div id="progressDisplay" style="display: none;">
+        <div id="progressDisplay" class="task-section" style="display: none;">
             <h2>Progress</h2>
             <p id="progressData"></p>
         </div>
