--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Planner</title>
+    <title>Enhanced Study Planner</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
         <!-- Task Input Section -->
         <div class="task-input">
-            <input type="text" id="description" placeholder="Enter Task Description" required>
+            <input type="text" id="description" placeholder="Task Description" required>
             <input type="date" id="deadline" required>
             <button onclick="addTask()">Add Task</button>
         </div>
@@ -22,7 +22,7 @@
             <button onclick="displayTasks()">Display Planned Tasks</button>
             <button onclick="displayCompletedTasks()">Show Completed Tasks</button>
             <button onclick="showProgress()">Show Progress</button>
-            <button onclick="clearAllTasks()">Clear All Tasks</button>
+            <button onclick="clearAllTasks()">Clear All</button>
         </div>
 
         <!-- Planned Tasks Display Section -->
